--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
+    "chart.js": "^4.4.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.7"
