--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "html2canvas": "^1.4.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
